--- a/core/pom.xml
+++ b/core/pom.xml
@@ -76,8 +76,13 @@
 			<version>1.4.200</version>
 			<scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.vaadin</groupId>
+            <artifactId>vaadin-flow-components-base</artifactId>
+            <version>24.3.3</version>
+        </dependency>
 
-	</dependencies>
+    </dependencies>
 
 	<build>
 		<plugins>
